@@ -27,3 +27,4 @@ REFERENCES_RELATION    = YES
 ALPHABETICAL_INDEX     = NO
 GENERATE_LATEX         = NO
 HAVE_DOT               = NO
+OUTPUT_DIRECTORY       = doc
