@@ -256,6 +256,9 @@ Avro 1.8.0 (15 December 2015)
 
     AVRO-1725. Docs: clarify restrictions on enum symbols. (martinkl)
 
+    AVRO-1779. Avro docs convenience artifact missing LICENSE/NOTICE.
+    (blue via tomwhite)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
